--- a/templates/index.html
+++ b/templates/index.html
@@ -232,8 +232,9 @@ body {
                     </ol>
                 </div>
                 <a href="https://github.com/prabinbessie/instagram-unfollower-checker" 
-                   target="_blank" 
-                   class="btn btn-outline-dark mt-2">
+                                   target="_blank" 
+                                   rel="noopener"
+                                   class="btn btn-outline-dark mt-2"></a>
                     <i class="fab fa-github"></i> View on GitHub
                 </a>
             </div>
